Fix question C4 in 08

--- a/08 - Inclusion Exclusion Principle.tex
+++ b/08 - Inclusion Exclusion Principle.tex
@@ -429,7 +429,7 @@
     \begin{column}{0.5\textwidth}
       \begin{enumerate}
         \conti
-        \item When a fair $6$-sided die is rolled $7$ times, the probability that sum of the $7$ rolls will be $10$ can be represented as $\dfrac{n}{67}$.  Find the value of~$n$.
+        \item When a fair $6$-sided die is rolled $7$ times, the probability that sum of the $7$ rolls will be $10$ can be represented as $\dfrac{n}{6^7}$.  Find the value of~$n$.
       \end{enumerate}
     \end{column}
   \end{columns}
