Finish 12 - Right Triangles

--- a/10 - Angles and Triangles.tex
+++ b/10 - Angles and Triangles.tex
@@ -108,7 +108,7 @@
         Pairs of angles that sum to $180°$ are called \textbf{supplementary}.
       \end{definition}\medskip
 
-      \begin{tabularx}{\textwidth}{YYY}
+      \begin{tabularx}{\textwidth}{YY}
         \begin{mplibcode}
           u = 0.6cm;
           repere(-5,5,u,-1,5,u);
