--- a/14 - Inscribed Figures.tex
+++ b/14 - Inscribed Figures.tex
@@ -310,8 +310,8 @@
             draw E--D withpen pencircle scaled 1.25;
           fin;
         \end{mplibcode}
-        \vspace*{-\intextsep}
       \end{center}
+      This is consistent with exercises \# 6-7, where you show that the area of $\triangle ABC$ is less than half of the area of the circle it’s inscribed into.
     \end{column}
   \end{columns}
 \end{frame}
@@ -361,8 +361,10 @@
             label.lrt("$r$", 0.5[O, b]);
           fin;
         \end{mplibcode}
-        \vspace*{-\intextsep}
       \end{center}
+      \begin{definition}
+        For any circle inscribed inside of a triangle, the area of a triangle is equal to its semi-perimeter times the radius of the circle inscribed inside of it.
+      \end{definition}
     \end{column}
   \end{columns}
 \end{frame}
