--- a/beamerouterthemegraham.sty
+++ b/beamerouterthemegraham.sty
@@ -14,6 +14,10 @@
 \newfontfamily\HUGE[SizeFeatures={Size=30}]{Arial Bold}
 \DeclareMathAlphabet{\mathbb}{U}{msb}{m}{n}
 
+\setmathfont{NewCMMath-Regular}[
+  range=\ell,
+  Scale=MatchLowercase]
+  
 \newlength{\marginedPaperWidth}{\paperwidth - 0.2cm}
 
 \appto\normalsize{%
