Fix fractions spacing

--- a/15 - 3D Geometry.tex
+++ b/15 - 3D Geometry.tex
@@ -385,7 +385,7 @@
       
       After we unfold the cone surface into a circular wedge, we just need to find the area of that wedge, which is the area of the full circle ($\pi \ell^2$) times the fraction of circle covered by that wedge.  That fraction is the arclength of the wedge ($2\pi r$) divided by the circumference of the full circle ($2\pi\ell$).  The wedge area is 
       \normalsize
-      \[\pi \ell^2 \dfrac{r}{l} = \pi \ell r.\]
+      \[\pi \ell^2 \dfrac{r}{\ell} = \pi \ell r.\]
     \end{column}
     \begin{column}{0.5\textwidth}
       \begin{center}
