--- a/beamerouterthemegraham.sty
+++ b/beamerouterthemegraham.sty
@@ -15,9 +15,8 @@
 \DeclareMathAlphabet{\mathbb}{U}{msb}{m}{n}
 
 \setmathfont{NewCMMath-Regular}[
-  range=\ell,
-  Scale=MatchLowercase]
-  
+  range=\ell]
+
 \newlength{\marginedPaperWidth}{\paperwidth - 0.2cm}
 
 \appto\normalsize{%
