--- a/Dijkstra algorithm.tex
+++ b/Dijkstra algorithm.tex
@@ -15,15 +15,16 @@
 
 \usetheme{graham}
 
-\title{Kvantik problems,\\ December 2021}
+\title{Dijkstra's algorithm}
 % \subtitle[Graham Middle School]{Graham Middle School Math Olympiad Team}
 
 \begin{document}
 
-\begin{frame}{Dijkstra algorithm}
+\begin{frame}{Dijkstra's algorithm}
   \begin{columns}[T]
     \begin{column}{0.5\textwidth}
-      \begin{example}
+      \textbf{Dijkstra's algorithm} is an algorithm for finding the shortest paths between nodes in a graph, which may represent, for example, road networks. 
+      \begin{problem}
         \begin{enumerate}
           \item Mark all nodes unvisited.
           \item Set \emph{tentative distance} for all nodes.
@@ -36,13 +37,19 @@
           \item For every node connected to this node:
             \begin{enumerate}
               \item \textbf{Calculate new \emph{tentative distance}}:
-                    {\large \hspace*{-2em}$\text{Current node's distance} + \text{path distance}.$}
+
+                    \medskip
+                    {\large \hspace*{-2em}$\text{Current node's distance} + \text{path length}$}
+                    \medskip
               \item Set if it lower then current \emph{tentative distance}.
             \end{enumerate}
           \item Mark selected node as visited.
+          
+          We no longer consider visited nodes.
+
           \item Go to step \ref{itm:select}.
         \end{enumerate}
-      \end{example}
+      \end{problem}
     \end{column}
     \begin{column}{0.5\textwidth}
       Step 1: set initial \emph{tentative distance} for all nodes.
@@ -75,7 +82,7 @@
   \end{columns}
 \end{frame}
 
-\begin{frame}{Dijkstra algorithm}
+\begin{frame}{Dijkstra's algorithm}
   \begin{columns}[T]
     \begin{column}{0.5\textwidth}
       Step 2: select node with lowest \emph{tentative distance} ($T$) and update all connected nodes.
@@ -149,7 +156,7 @@
   \end{columns}
 \end{frame}
 
-\begin{frame}{Dijkstra algorithm}
+\begin{frame}{Dijkstra's algorithm}
   \begin{columns}[T]
     \begin{column}{0.45\textwidth}
       Step 4: Mark current node ($S$) as visited, select node with lowest \emph{tentative distance} ($N$) and update all connected nodes.
@@ -212,18 +219,64 @@
         \vspace*{-0.5em}
       \end{center}
 
-      Step 6: Final node become current, end of algorithm.
     \end{column}
   \end{columns}
 \end{frame}
 
-% \begin{frame}{Title}
-%   \begin{columns}[T]
-%     \begin{column}{0.5\textwidth}
-%     \end{column}
-%     \begin{column}{0.5\textwidth}
-%     \end{column}
-%   \end{columns}
-% \end{frame}
+\begin{frame}{Dijkstra's algorithm}
+  \begin{columns}[T]
+    \begin{column}{0.5\textwidth}
+      Step 6: Final node become current ($S$), end of algorithm.
+
+      So shortest distance from $T$ to $W$ is $10.20$.
+
+      \begin {center}
+        \vspace*{-0.5em}
+        \begin {tikzpicture}[-latex,auto,node distance =2 cm and 2.5cm ,on grid ,
+        semithick ,
+        unvisited/.style ={circle,top color =white, bottom color = processblue!20 ,
+        draw,processblue, text=blue, minimum width =0.5 cm},
+        current/.style ={circle,top color =white, bottom color = red!20 ,
+        draw,red, text=blue, minimum width =0.5 cm},
+        visited/.style ={circle,top color =white, bottom color = black!20 ,
+        draw,black, text=blue, minimum width =0.5 cm}]
+          \node[visited, label={[xshift=1em, yshift=-0.5em]\large $0$}] (T) {$T$};
+          \node[visited, label={[xshift=1.5em, yshift=-0.5em]\large $4.20$}] (S) [below=of T] {$S$};
+          \node[visited, label={[xshift=-1.25em, yshift=-0.5em]\large $5.95$}] (N) [left=of S] {$N$};
+          \node[visited, label={[xshift=1em, yshift=-0.5em]\large $6.70$}] (O) [right=of S] {$O$};
+          \node[current, label={[xshift=1em, yshift=-4em]\large $10.20$}] (W) [below=of S] {$W$};
+          \path[-] (T) edge node[sloped] {$\scriptstyle 4.20$} (S);
+          \path[-] (N) edge node[sloped] {$\scriptstyle 6.35$} (T);
+          \path[-] (T) edge node[sloped] {$\scriptstyle 7.50$} (O);
+          \path[-] (S) edge node[sloped] {$\scriptstyle 7.50$} (W);
+          \path[-] (N) edge node[sloped] {$\scriptstyle 1.75$} (S);
+          \path[-] (S) edge node[sloped] {$\scriptstyle 2.50$} (O);
+          \path[-] (W) edge node[sloped] {$\scriptstyle 4.25$} (N);
+          \path[-] (O) edge node[sloped] {$\scriptstyle 3.75$} (W);
+        \end{tikzpicture}
+        \vspace*{-0.5em}
+      \end{center}
+    \end{column}
+    \begin{column}{0.5\textwidth}
+      Dijkstra's algorithm consider each node \emph{no more then once} and consider every road \emph{no more then once}.
+
+      To restore a shortest path, algorithm may be modified: each node needs to remember last current node to update its distance.
+
+      If we dod that, then 
+      
+      $T$ is initial node,
+
+      $S$ remembers $T$, 
+      
+      $N$ remembers $S$, 
+      
+      $O$ remembers $S$, 
+      
+      $W$ remembers $N$.
+
+      Walking back we restore our path: $T$ -- $S$ -- $N$ -- $W$.
+    \end{column}
+  \end{columns}
+\end{frame}
 
 \end{document}
